<resources>
    <string name="app_name">GitExcercise</string>
    <string name="title_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="action_create_account">Don\'t Have An Account? Sign Up</string>
    <string name="action_submit">Submit</string>
    <string name="title_registration">Registration</string>
    <string name="action_save_password">Save Password</string>
    <string name="title_new_password">Create New Password</string>
    <string name="msg_greetings">Welcome</string>
    <string name="hint_new_username">Write new username here…</string>
</resources>